Alignment fix.

--- a/style.css
+++ b/style.css
@@ -205,13 +205,13 @@ i {
 
 .college-name {
   margin-left: 50rem;
-  font-size: 3.5rem;
+  font-size: 3rem;
   letter-spacing: 0.08rem;
 }
 
 .hindi {
   margin-left: 50rem;
-  font-size: 3.5rem;
+  font-size: 3rem;
   letter-spacing: 0.08rem;
 }
 
